# mediapipe-sface-sample

./: pyproject.toml
src/mediapipe_sface_sample/: __init__.py
